<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2021, RTE (http://www.rte-france.com) This Source Code
    Form is subject to the terms of the Mozilla Public License, v. 2.0. If a
    copy of the MPL was not distributed with this file, You can obtain one at
    http://mozilla.org/MPL/2.0/.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>24</version>
        <relativePath />
    </parent>

    <artifactId>powsybl-dynawo</artifactId>
    <version>3.1.0</version>
    <packaging>pom</packaging>

    <name>powsybl dynawo</name>
    <description>Dynawo integration modules for powsybl</description>
    <url>https://www.powsybl.org</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-dynawo.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-dynawo.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-dynawo</url>
    </scm>

    <developers>
        <developer>
            <name>Laurent Issertial</name>
            <email>laurent.issertial@rte-france.com</email>
            <organization>Aubay</organization>
            <organizationUrl>https://aubay.com</organizationUrl>
        </developer>
        <developer>
            <name>Florian DUPUY</name>
            <email>florian.dupuy@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <modules>
        <module>commons</module>
        <module>dynaflow</module>
        <module>dynawo-simulation</module>
        <module>dynawo-dsl</module>
        <module>dynawo-algorithms</module>
        <module>distribution</module>
        <module>dynawo-contingencies</module>
        <module>dynawo-extensions</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <powsybl-core.version>7.1.0</powsybl-core.version>
        <groovy.version>4.0.26</groovy.version> <!-- used for groovy-json but also for groovydoc (dynawo-dsl) -->
        <asciitable.version>0.3.2</asciitable.version>
        <jackson.version>2.17.1</jackson.version>
        <sonar.coverage.jacoco.xmlReportPaths>
            ../distribution/target/site/jacoco-aggregate/jacoco.xml,
            ../../distribution/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <argLine/> <!--  This is required for later correct replacement of argline -->
        <!-- Other variables -->
        <enable-dynamic-agent-loading.argLine/>
    </properties>

    <profiles>
        <profile>
            <id>java21+</id>
            <activation>
                <jdk>[21,)</jdk>
            </activation>
            <properties>
                <!-- In Java 21+, we have to add a parameter to allow dynamic agent loading (cf. powsybl-parent) -->
                <enable-dynamic-agent-loading.argLine>-XX:+EnableDynamicAgentLoading</enable-dynamic-agent-loading.argLine>
            </properties>
        </profile>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>dynawo-integration-tests</module>
            </modules>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>javadoc-aggregate-jar</id>
                                <phase>package</phase>
                                <inherited>false</inherited>
                                <goals>
                                    <goal>aggregate-jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>integration-tests</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>dynawo-integration-tests</module>
            </modules>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- Argument added to set the default locale as en_US for unit tests run to be independent of the JVM locale -->
                    <argLine>@{argLine} -Duser.language=en -Duser.region=US ${enable-dynamic-agent-loading.argLine}</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-core</artifactId>
                <version>${powsybl-core.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-commons</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-contingencies</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-distribution</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynaflow</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-simulation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-simulation</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-dsl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-algorithms-commons</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-security-analysis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-margin-calculation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-integration-tests</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-extensions-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-extensions-impl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawo-extensions-serde</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.groovy</groupId>
                <artifactId>groovy-json</artifactId>
                <version>${groovy.version}</version>
            </dependency>
            <dependency>
                <groupId>de.vandermeer</groupId>
                <artifactId>asciitable</artifactId>
                <version>${asciitable.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jdk8</artifactId>
                <version>${jackson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
